--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -5,3 +5,10 @@ on:
     branchs:
       - main
   workflow_dispatch:   
+
+  jobs:
+    build-and-deploy:
+      name: Iniciando build e deploy
+      runs-on: ubuntu-latest
+      environments: production 
+
